--- a/about.html
+++ b/about.html
@@ -86,6 +86,10 @@
 					<p>Tyson Lynn is an organizer of HONK! Fest West, a community-supported music festival of acoustic and marching bands designed to erase the boundary between performer and audience, reclaim public spaces, promote community activism, and champion the art of making fun as a form of individual and collective transcendence. Tyson works at renowned independent music station KEXP-FM, volunteers at the community internet station Hollow Earth Radio and writes for the SeattlePI.com.</p>
 				</div>
 				<div class="shaper-bio">
+					<h3>Victoria Y.H. Wood [+]</h3>
+					<p>Victoria Y.H. Wood is a second-year graduate student in the PhD program in mathematics at the University of California, Berkeley, where she holds an NSF Graduate Fellowship. Inventing professionally since the age of 11, with over five dozen patents awarded and several hundred more pending which have focused on health enhancement, medical devices and energy-&amp;-environmental matters, she is recognized as the most prolific inventor of her generation and one of the most successful female inventors on record.</p>
+				</div>
+				<div class="shaper-bio">
 					<h3>Yun-Ling Wong [+]</h3>
 					<p>Dr. Yun-Ling Wong serves as program officer in Global Health Program Discovery &amp; Translational Sciences at the Bill and Melinda Gates Foundation, leading a $200 million initiative to foster innovators solving problems in the developing world, and as a program investment officer leveraging private capital to develop solutions for health and development. Her previous work in vaccine and drug delivery at Harvard and MIT led her to publish in the Proceedings of the National Academy of Sciences and be featured in Newsweek.</p>
 				</div>
