--- a/about.html
+++ b/about.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html>
 <head>
-	<title></title>
+	<title>Seattle Global Shapers</title>
+	<meta name="description" content="The Seattle Global Shapers are a council of young professionals committed to cultivating the next generation of leaders and change agents by inspiring, empowering, and advocating for Northwest youth.">
+	<meta name="keywords" content="seattle, global shapers, world economic forum, wef, seattle shapers">
+	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+	
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
